--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
   </div>
   <div class="col-md-6" id='about-desc'>
     <h2>About Me</h2><br>
-    <p>Hi! My name is Rohan Natraj. I'm originally an east coaster from suburban Philadelphia. After high school, I moved up to Somerville, Massachussetts to study Cognitive Science at Tufts University. I love trying new food, brewing beer, traveling, and enjoying all that nature has to offer. I treasure the novelty of new experiences and will try just about anything (within reason) once. I am a ruminator who likes tackling complex issues with others. </p>
+    <p>Hi! My name is Rohan Natraj. I'm originally an east coaster from suburban Philadelphia.
+      After high school, I moved up to Somerville, Massachussetts to study Cognitive Science at Tufts University.
+      I love trying new food, brewing beer, traveling, and enjoying all that nature has to offer.
+      I treasure the novelty of new experiences and will try just about anything (within reason) once. I enjoy working with others to solve
+    challenging problems.</p>
       </p>
   </div>
 </div>
@@ -48,35 +52,56 @@
     </div>
     <div class="col-md-6" id ="resume-desc">
       <h2>Resume</h2><br>
-      <p>I'm a creative and analytical product developer with a background in cognitive science. I enjoy learning new technical tools and applying technical solutions to complex problems. I am an effective communicator and collaborator who values new social experiences and diverse perspectives. I am interested in applying cognitive science in the tech industry, in the areas of human-computer interaction, collaborative technology design and user experience. My resume shows a combination of technical aptitude and research skills to help any organization develop data-driven, user-centric products. </p>
+      <p>I'm a creative and analytical product developer with a background in cognitive science. I enjoy learning new
+        technical tools and applying technical solutions to complex problems. I am an effective communicator and
+        collaborator who values new social experiences and diverse perspectives. I am interested in applying
+        cognitive science in the tech industry, in the areas of human-computer interaction, collaborative technology design
+        and user experience. My resume shows a combination of technical aptitude and research skills to help any
+        organization develop data-driven, user-centric products.</p>
     </div>
   </div>
   <div id ='portfolio' class='row'>
-    <div class='col-sm-6 col-md-6'>
+    <h2 style='text-align:center'>Portfolio</h2>
+    <div class='col-md-6'>
       <div class='thumbnail'>
-        <img src="./portfolio_assets/ctrends_small.png">
+        <a href = "http://www.careertrends.com" target="_blank"><img src="./portfolio_assets/ctrends.png"></a>
       </div>
       <div class ='caption'>
-        <h3>Careers</h3>
-        <p>.
-
-        </p>
+        <h3>CareerTrends & Career Profiles</h3>
+        <p>CareerTrends features several of online research tools to help inform
+          job seekers with all of the information they need to make an informed career move. I launched
+          the flagship <a href="http://www.career-profiles.careertrends.com" target="_blank">Career Profiles</a> research tool that offers
+          comprehensive information on over 1,000 career paths through data visualizations & articles.
+          It's visualizations and articles have been featured on
+          <a href="http://finance.yahoo.com/news/the-25-most-dangerous-occupations-144554481.html" target="_blank">Yahoo</a> &
+          <a href="http://finance.yahoo.com/news/the-25-most-dangerous-occupations-144554481.html" target="_blank">MSN</a>.
+          I managed and grew CareerTrends to a 200K visit per month domain with consistent requests from top publishers for its content.
+          This project involved extensive use of <strong>MySQL, Pentaho ETL software & Excel</strong> for data analysis. I created
+          custom visualizations using <strong>javascript, HTML/CSS, d3.JS & HighCharts</strong>. I used <strong>Google Analytics &
+            WebMaster Tools</strong> for daily domain analytics and SEO analysis.</p>
         <p>
-          <a href="http://www.careertrends.com/" class="btn btn-primary" role="button" target="_blank">Visit Website</a>
-          <a href="http://www.coroflot.com/rnatraj/Careers-Website" class="btn btn-default" role="button">See Wireframes</a>
+          <a href="http://www.careertrends.com/" class="btn btn-primary" role="button" target="_blank">Visit CareerTrends</a>
+          <a href="http://www.coroflot.com/rnatraj/Careers-Website" class="btn btn-default" role="button">See Career Profiles Wireframes</a>
         </p>
       </div>
     </div>
-    <div class='col-sm-6 col-md-6'>
+    <div class='col-md-6'>
       <div class='thumbnail'>
-        <img src="./portfolio_assets/docnote.jpg">
+        <img src="./portfolio_assets/docnote.png">
       </div>
       <div class ='caption'>
         <h3>DocNote</h3>
-        <p>Description of this product</p>
+        <p>DocNote is a study tool geared towards students in medical school who are studying radiology. Its inspiration is the<thead>
+          result of multiple months of user research, usability testing and data-driven design. Along with two engineers and a designer, I
+          researched the interactions and behaviors of neuroradiology students at Tufts Medical Center. This involved contextual observation,
+          interviewing, task analysis, & workflow analysis. Our research revealed that students and faculty members participate in critically
+          important conversations when looking over MRI scans; however, students had no efficient, simply, & reliable way to keep track of
+          information for these dialogues. Multiple rounds of prototyping and usability testing lead to a final wireframe design and interaction
+          architecture for DocNote.
+        </thead></p>
         <p>
           <a href="http://www.coroflot.com/rnatraj/DocNote" class="btn btn-primary" role="button" target="_blank">See Wireframes</a>
-          <a href="#" class="btn btn-default" role="button">Download Research Paper</a>
+          <a href="https://drive.google.com/file/d/0B4kfi0cfSlHycFNqWDhkQ2REZDQ/view?usp=sharing" class="btn btn-default" role="button" target="_blank">See Research Paper</a>
         </p>
       </div>
     </div>
@@ -93,7 +118,7 @@
       <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank"><img src="./icons/html5.png"></a>
     </div>
     <div class="col-xs-4 col-md-2">
-      <a href="https://www.mysql.com/" target="_blank"><img src="./icons/mysql.png" style="width:65%"></a>
+      <a href="https://www.mysql.com/" target="_blank"><img src="./icons/mysql.png" style="width:65%; border-radius:8px"></a>
     </div>
     <div class="col-xs-4 col-md-2">
       <a href="https://github.com/natrajr" target="_blank"><img src="./icons/github.png"></a>
